--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ pyrogram==2.0.106
 tgcrypto==1.2.5
 aiohttp==3.9.1
 beautifulsoup4==4.12.2
-lxml==4.9.3
-trafilatura==1.6.4
+lxml # ==4.9.3
+trafilatura # ==1.6.4
 python-dotenv==1.0.0
 requests==2.31.0
 urllib3==2.1.0
